--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
 	base = 2d6699d
-	trimbase = 1a6b9ad
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
