--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
-	base = b3923df3
-	trimbase = 
+	base = c17d37c
+	trimbase = b3923df3
 	parent = upstream
 	previous = d741250
