--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_controller_manager_example
 	base = ca7ddde
-	trimbase = 604db8f
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
