--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
-	base = 55440f2
-	trimbase = 
+	base = ee7ff60
+	trimbase = 55440f2
 	parent = upstream
 	previous = d741250
