--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
 	base = a22a514
-	trimbase = 2e977e5
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
