--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
-	base = 42e7943
-	trimbase = 
+	base = 0c56597
+	trimbase = 42e7943
 	parent = upstream
 	previous = d741250
