--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_experimental
-	base = 4482341
-	trimbase = 
+	base = 0699026
+	trimbase = 4482341
 	parent = upstream
 	previous = d741250
