--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
 	base = d5ce2ff
-	trimbase = 7304c67
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
