--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
-	base = 4ac58fd
-	trimbase = 
+	base = 3882021
+	trimbase = 4ac58fd
 	parent = upstream
 	previous = d741250
