--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
 	base = 43dd63d
-	trimbase = 32611e9
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
