--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
 	base = be029b5
-	trimbase = c517a08
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
