--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
 	base = d894149
-	trimbase = 2fa5619
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
