--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
-	base = f0461fc
-	trimbase = 
+	base = 0542960
+	trimbase = f0461fc
 	parent = upstream
 	previous = d741250
