--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
 	base = 97332f8
-	trimbase = 8548367
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
