--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
-	base = 51c5717
-	trimbase = 
+	base = f314773
+	trimbase = 51c5717
 	parent = upstream
 	previous = d741250
