--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
-	base = 38e5b20
-	trimbase = 
+	base = c60dd22
+	trimbase = 38e5b20
 	parent = upstream
 	previous = d741250
