--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
 	base = 3dedfb5
-	trimbase = e32eb8d
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
