--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
-	base = 7dccab1
-	trimbase = 
+	base = cee14a2
+	trimbase = 7dccab1
 	parent = upstream
 	previous = d741250
