--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
 	base = d7b9379
-	trimbase = c483117
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
