--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
-	base = 08ad500
-	trimbase = 
+	base = 689a271
+	trimbase = 08ad500
 	parent = upstream
 	previous = d741250
