--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_core
-	base = 42eecfb
-	trimbase = 
+	base = 0660ac9
+	trimbase = 42eecfb
 	parent = upstream
 	previous = d741250
