--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
 	base = 4dc46af
-	trimbase = 30a0f7f
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
