--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
 	base = c655c21
-	trimbase = f16c5d5
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
