--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
-	base = 68c3f38
-	trimbase = 
+	base = aa82a85
+	trimbase = 68c3f38
 	parent = upstream
 	previous = d741250
