--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
 	base = 8d35ab3
-	trimbase = 107a7dd
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
