--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
 	base = d2ae74a
-	trimbase = 0e7e9a0
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
