--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
-	base = 49f04bc
-	trimbase = 
+	base = e5de70c
+	trimbase = 49f04bc
 	parent = upstream
 	previous = d741250
