--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
 	base = f31585c
-	trimbase = dc88e79
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
