--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
-	base = bb37c64
-	trimbase = 
+	base = d885f75
+	trimbase = bb37c64
 	parent = upstream
 	previous = d741250
