--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
 	base = 0836569
-	trimbase = 5c253b4
+	trimbase = 
 	parent = upstream
 	previous = 7fb8c1d
