--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
-	base = 1c72663
-	trimbase = 
+	base = 54590da
+	trimbase = 1c72663
 	parent = upstream
 	previous = d741250
