--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit
-	base = d4c29f0
-	trimbase = 
+	base = edd5b93
+	trimbase = d4c29f0
 	parent = upstream
 	previous = d741250
