--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_controller_manager_example
 	base = 0b29904
-	trimbase = 2c97bcf
+	trimbase = 
 	parent = upstream
 	previous = d741250
