--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_controller_manager_example
-	base = 727a29c
-	trimbase = 
+	base = 53d09b1
+	trimbase = 727a29c
 	parent = upstream
 	previous = 3b8c35a
