--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
 	base = 9e057f0
-	trimbase = 39c47d1
+	trimbase = 
 	parent = upstream
 	previous = d741250
