--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
-	base = 1147c5c
-	trimbase = 
+	base = fdd9ab4
+	trimbase = 1147c5c
 	parent = upstream
 	previous = 3b8c35a
