--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
-	base = e6a34f5
-	trimbase = 
+	base = 4abcea6
+	trimbase = e6a34f5
 	parent = upstream
 	previous = 3b8c35a
