--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
-	base = a8126fd
-	trimbase = 
+	base = b190447
+	trimbase = a8126fd
 	parent = upstream
 	previous = 3b8c35a
