--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_experimental
-	base = cb48bfc
-	trimbase = 
+	base = 5296487
+	trimbase = cb48bfc
 	parent = upstream
 	previous = 3b8c35a
