--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
 	base = 3882021
-	trimbase = 4ac58fd
+	trimbase = 
 	parent = upstream
 	previous = d741250
