--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
-	base = 2554e66
-	trimbase = 
+	base = 308720e
+	trimbase = 2554e66
 	parent = upstream
 	previous = 3b8c35a
