--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
 	base = e4d2ea1
-	trimbase = 98e6769
+	trimbase = 
 	parent = upstream
 	previous = d741250
