--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
-	base = ae4d9cf
-	trimbase = 
+	base = 0e90651
+	trimbase = ae4d9cf
 	parent = upstream
 	previous = 3b8c35a
