--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
 	base = 2d6a38c
-	trimbase = 8a7219d
+	trimbase = 
 	parent = upstream
 	previous = d741250
