--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
-	base = 492bf20
-	trimbase = 
+	base = 6dbcc66
+	trimbase = 492bf20
 	parent = upstream
 	previous = 3b8c35a
