--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
-	base = e4abeaf
-	trimbase = 
+	base = 548db44
+	trimbase = e4abeaf
 	parent = upstream
 	previous = 3b8c35a
