--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
-	base = d45b431
-	trimbase = 
+	base = 1a7d9ee
+	trimbase = d45b431
 	parent = upstream
 	previous = 3b8c35a
