--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
-	base = a783121
-	trimbase = 
+	base = b641769
+	trimbase = a783121
 	parent = upstream
 	previous = 3b8c35a
