--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
 	base = cee14a2
-	trimbase = 7dccab1
+	trimbase = 
 	parent = upstream
 	previous = d741250
