--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
-	base = 642a408
-	trimbase = 
+	base = ff8c5d2
+	trimbase = 642a408
 	parent = upstream
 	previous = 3b8c35a
