--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
 	base = 36d132c
-	trimbase = 4d3d532
+	trimbase = 
 	parent = upstream
 	previous = d741250
