--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
 	base = 8c6af52
-	trimbase = 555054e
+	trimbase = 
 	parent = upstream
 	previous = d741250
