--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
-	base = ae1e9a2
-	trimbase = 
+	base = 932a76d
+	trimbase = ae1e9a2
 	parent = upstream
 	previous = 3b8c35a
