--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_core
-	base = a3bf472
-	trimbase = 
+	base = 0110a8c
+	trimbase = a3bf472
 	parent = upstream
 	previous = 3b8c35a
