--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
 	base = ab3c632
-	trimbase = f09b419
+	trimbase = 
 	parent = upstream
 	previous = d741250
