--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
-	base = d16b5cb
-	trimbase = 
+	base = acbf1b6
+	trimbase = d16b5cb
 	parent = upstream
 	previous = 3b8c35a
