--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
 	base = 8e72a7e
-	trimbase = 907f1c0
+	trimbase = 
 	parent = upstream
 	previous = d741250
