--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
-	base = 1f82774
-	trimbase = 
+	base = 783bfce
+	trimbase = 1f82774
 	parent = upstream
 	previous = 3b8c35a
