--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
-	base = 84611bf
-	trimbase = 
+	base = 32507d7
+	trimbase = 84611bf
 	parent = upstream
 	previous = 3b8c35a
