--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
 	base = cf6c982
-	trimbase = 6cd9b21
+	trimbase = 
 	parent = upstream
 	previous = d741250
