--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
 	base = e5de70c
-	trimbase = 49f04bc
+	trimbase = 
 	parent = upstream
 	previous = d741250
