--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
-	base = 5aae5ff
-	trimbase = 
+	base = 996fd11
+	trimbase = 5aae5ff
 	parent = upstream
 	previous = 3b8c35a
