--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
-	base = 73566f3
-	trimbase = 
+	base = 8d8bb34
+	trimbase = 73566f3
 	parent = upstream
 	previous = 3b8c35a
