--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit
-	base = 6b95904
-	trimbase = 
+	base = da32880
+	trimbase = 6b95904
 	parent = upstream
 	previous = 3b8c35a
