--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
 	base = 2d4b990
-	trimbase = 08df7ff
+	trimbase = 
 	parent = upstream
 	previous = 3b8c35a
