--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
-	base = 54e17bcde
-	trimbase = 
+	base = acb13154e
+	trimbase = 54e17bcde
 	parent = upstream
 	previous = ca1061c29
