--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_controller_manager_example
-	base = 9574d268e
-	trimbase = 
+	base = 9e7c3ac7c
+	trimbase = 9574d268e
 	parent = upstream
 	previous = ca1061c29
