--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
 	base = fdd9ab4
-	trimbase = 1147c5c
+	trimbase = 
 	parent = upstream
 	previous = 3b8c35a
