--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
-	base = e3dabab53
-	trimbase = 
+	base = 697c8b9ca
+	trimbase = e3dabab53
 	parent = upstream
 	previous = ca1061c29
