--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
-	base = 11a44d33d
-	trimbase = 
+	base = bb41af4bd
+	trimbase = 11a44d33d
 	parent = upstream
 	previous = ca1061c29
