--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
 	base = 5d4c68b
-	trimbase = 1887eb7
+	trimbase = 
 	parent = upstream
 	previous = 3b8c35a
