--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
-	base = 66b0a4aa9
-	trimbase = 
+	base = bae5ecc0d
+	trimbase = 66b0a4aa9
 	parent = upstream
 	previous = ca1061c29
