--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
 	base = 548db44
-	trimbase = e4abeaf
+	trimbase = 
 	parent = upstream
 	previous = 3b8c35a
