--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
-	base = d2720477f
-	trimbase = 
+	base = 6c281b035
+	trimbase = d2720477f
 	parent = upstream
 	previous = ca1061c29
