--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e498ad8ed
-	trimbase = 
+	trim = moveit_planners/chomp/chomp_optimizer_adapter
+	base = 2c2ba5c44
+	trimbase = e498ad8ed
 	parent = upstream
 	previous = ca1061c29
