--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
-	base = 4fea82736
-	trimbase = 
+	base = dffe53d99
+	trimbase = 4fea82736
 	parent = upstream
 	previous = ca1061c29
