--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
-	base = da55fb99c
-	trimbase = 
+	base = 8e8ba2c47
+	trimbase = da55fb99c
 	parent = upstream
 	previous = ca1061c29
