--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
 	base = 8d6f464
-	trimbase = 2ea975c
+	trimbase = 
 	parent = upstream
 	previous = 3b8c35a
