--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
 	base = 6bedb4c
-	trimbase = 9e6c74b
+	trimbase = 
 	parent = upstream
 	previous = 3b8c35a
