--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
-	base = cd1438701
-	trimbase = 
+	base = bb25600db
+	trimbase = cd1438701
 	parent = upstream
 	previous = ca1061c29
