--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_core
-	base = a9c187516
-	trimbase = 
+	base = 0d03325fc
+	trimbase = a9c187516
 	parent = upstream
 	previous = ca1061c29
