--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
-	base = e68381997
-	trimbase = 
+	base = a92b2380a
+	trimbase = e68381997
 	parent = upstream
 	previous = ca1061c29
