--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
 	base = 783bfce
-	trimbase = 1f82774
+	trimbase = 
 	parent = upstream
 	previous = 3b8c35a
