--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
-	base = 56c017d89
-	trimbase = 
+	base = 7226c9fa1
+	trimbase = 56c017d89
 	parent = upstream
 	previous = ca1061c29
