--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
-	base = baee97699
-	trimbase = 
+	base = ee978727c
+	trimbase = baee97699
 	parent = upstream
 	previous = ca1061c29
