--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
 	base = 7c60345
-	trimbase = c1f5f9d
+	trimbase = 
 	parent = upstream
 	previous = 3b8c35a
