--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
 	base = 1c4a3f7
-	trimbase = 2f3c142
+	trimbase = 
 	parent = upstream
 	previous = 3b8c35a
