--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
-	base = d14d2e5c4
-	trimbase = 
+	base = 3d755d15d
+	trimbase = d14d2e5c4
 	parent = upstream
 	previous = ca1061c29
