--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
-	base = fb8a42fb2
-	trimbase = 
+	base = 7cbba81e3
+	trimbase = fb8a42fb2
 	parent = upstream
 	previous = ca1061c29
