--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit
-	base = fbe9989ef
-	trimbase = 
+	base = aa8ddc60b
+	trimbase = fbe9989ef
 	parent = upstream
 	previous = ca1061c29
