--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2c2ba5c44
+	base = d1c79e52d
 	trimbase = 
 	parent = release/melodic/moveit_chomp_optimizer_adapter
-	previous = 
+	previous = 2c2ba5c44
