--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4181bdac4
+	base = e463ee93d
 	trimbase = 
 	parent = debian/melodic/moveit_chomp_optimizer_adapter
-	previous = 
+	previous = 4181bdac4
