--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 47f3c8187
+	base = 02673f5cc
 	trimbase = 
 	parent = debian/melodic/moveit_chomp_optimizer_adapter
-	previous = 
+	previous = 47f3c8187
