--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 65ae07f85
+	base = a89494c71
 	trimbase = 
 	parent = rpm/melodic/moveit_chomp_optimizer_adapter
-	previous = 
+	previous = 65ae07f85
