--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
-	base = e345bd235
-	trimbase = 
+	base = 2599289e9
+	trimbase = e345bd235
 	parent = upstream
 	previous = ca1061c29
