--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
-	base = 7e780fa37
-	trimbase = 
+	base = dc45e602d
+	trimbase = 7e780fa37
 	parent = upstream
 	previous = ca1061c29
