--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
 	base = ab7cde9ae
-	trimbase = 4ddea19c0
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
