--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
-	base = 9ea58bc3f
-	trimbase = 
+	base = f69ee364a
+	trimbase = 9ea58bc3f
 	parent = upstream
 	previous = ca1061c29
