--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
 	base = 8671a583f
-	trimbase = 5bb1d597e
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
