--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
 	base = bb41af4bd
-	trimbase = 11a44d33d
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
