--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
-	base = 54e484e9f
-	trimbase = 
+	base = 9364875be
+	trimbase = 54e484e9f
 	parent = upstream
 	previous = ca1061c29
