--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
 	base = 831972f88
-	trimbase = c2e44b5c6
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
