--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
 	base = 634b1204a
-	trimbase = 82b8d3d26
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
