--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
 	base = bae5ecc0d
-	trimbase = 66b0a4aa9
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
