--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
-	base = 39c779b45
-	trimbase = 
+	base = e382f1e82
+	trimbase = 39c779b45
 	parent = upstream
 	previous = ca1061c29
