--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
 	base = 543397f79
-	trimbase = de77168c5
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
