--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
-	base = 2b54b3d04
-	trimbase = 
+	base = 0ff419cbb
+	trimbase = 2b54b3d04
 	parent = upstream
 	previous = ca1061c29
