--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
 	base = 6c281b035
-	trimbase = d2720477f
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
