--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
-	base = a83f091f0
-	trimbase = 
+	base = ee779fb84
+	trimbase = a83f091f0
 	parent = upstream
 	previous = ca1061c29
