--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	base = 800897fb1
-	trimbase = 
+	base = 30987049c
+	trimbase = 800897fb1
 	parent = upstream
 	previous = ca1061c29
