--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
-	base = 29f48b04c
-	trimbase = 
+	base = 6666db243
+	trimbase = 29f48b04c
 	parent = upstream
 	previous = ca1061c29
