--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
 	base = 179574fc9
-	trimbase = b6668bc55
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
