--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
 	base = c696c4ac8
-	trimbase = 8b05c9561
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
