--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
-	base = c72d2dc7c
-	trimbase = 
+	base = 6d9d3b688
+	trimbase = c72d2dc7c
 	parent = upstream
 	previous = ca1061c29
