--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_core
-	base = 0b62e50df
-	trimbase = 
+	base = f79744810
+	trimbase = 0b62e50df
 	parent = upstream
 	previous = ca1061c29
