--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
-	base = 944d1ff19
-	trimbase = 
+	base = b49f43ed7
+	trimbase = 944d1ff19
 	parent = upstream
 	previous = ca1061c29
