--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
-	base = f3aa4a4cb
-	trimbase = 
+	base = 00d7fc6cb
+	trimbase = f3aa4a4cb
 	parent = upstream
 	previous = ca1061c29
