--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
 	base = ee978727c
-	trimbase = baee97699
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
