--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
-	base = fb722982a
-	trimbase = 
+	base = 4c3b13bc7
+	trimbase = fb722982a
 	parent = upstream
 	previous = ca1061c29
