--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
 	base = 7c37f2906
-	trimbase = 913e67b46
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
