--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
-	base = 5ecf46acd
-	trimbase = 
+	base = 2bcaab1b8
+	trimbase = 5ecf46acd
 	parent = upstream
 	previous = ca1061c29
