--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
 	base = 7cbba81e3
-	trimbase = fb8a42fb2
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
