--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
-	base = 95b944a06
-	trimbase = 
+	base = 13ef230c5
+	trimbase = 95b944a06
 	parent = upstream
 	previous = ca1061c29
