--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
 	base = b2b996586
-	trimbase = 87db2ae0c
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
