--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
-	base = ba26ec0ce
-	trimbase = 
+	base = 093cc0b46
+	trimbase = ba26ec0ce
 	parent = upstream
 	previous = ca1061c29
