--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit
-	base = 80e596735
-	trimbase = 
+	base = c277e3e9e
+	trimbase = 80e596735
 	parent = upstream
 	previous = ca1061c29
