Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.10.6-0": ["Mon Dec 10 2018", "Raghavender Sahdev", "raghavendersahdev@gmail.com"]}
+{"0.10.6-0": ["Mon Dec 10 2018", "Raghavender Sahdev", "raghavendersahdev@gmail.com"], "0.10.6-1": ["Mon Dec 10 2018", "Raghavender Sahdev", "raghavendersahdev@gmail.com"]}
