--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
-	base = 4a2e1039f
-	trimbase = 
+	base = 882ba2e39
+	trimbase = 4a2e1039f
 	parent = upstream
 	previous = 177478b11
