--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_controller_manager_example
 	base = d28c72aa1
-	trimbase = 1936f1889
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
