--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_controller_manager_example
-	base = 3eabd6abf
-	trimbase = 
+	base = d6625bf94
+	trimbase = 3eabd6abf
 	parent = upstream
 	previous = 177478b11
