--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
-	base = 86a421e35
-	trimbase = 
+	base = d80a899cd
+	trimbase = 86a421e35
 	parent = upstream
 	previous = 177478b11
