--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
-	base = 17c181666
-	trimbase = 
+	base = ff2f756af
+	trimbase = 17c181666
 	parent = upstream
 	previous = 177478b11
