--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
 	base = 2dffca591
-	trimbase = 730b496c3
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
