--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
-	base = 2787a5975
-	trimbase = 
+	base = 09d9775ba
+	trimbase = 2787a5975
 	parent = upstream
 	previous = 177478b11
