--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_experimental
 	base = a4f8c9a9e
-	trimbase = 96b709316
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
