--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_experimental
-	base = bd87cd638
-	trimbase = 
+	base = 2caedf217
+	trimbase = bd87cd638
 	parent = upstream
 	previous = 177478b11
