--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/move_group
-	base = c7daf121e
-	trimbase = 
+	base = 2adf45984
+	trimbase = c7daf121e
 	parent = upstream
 	previous = 177478b11
