--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
 	base = bbf30689d
-	trimbase = 4a6207330
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
