--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
-	base = 9f2347e5b
-	trimbase = 
+	base = 29d64b3cf
+	trimbase = 9f2347e5b
 	parent = upstream
 	previous = 177478b11
