--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
 	base = 1638468aa
-	trimbase = 5ee2631c4
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
