--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
-	base = 3ddbc9a9f
-	trimbase = 
+	base = 15851c54e
+	trimbase = 3ddbc9a9f
 	parent = upstream
 	previous = 177478b11
