--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
-	base = e8e694ece
-	trimbase = 
+	base = 7fa5ee061
+	trimbase = e8e694ece
 	parent = upstream
 	previous = 177478b11
