--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
-	base = dea9313c9
-	trimbase = 
+	base = cde0f61b2
+	trimbase = dea9313c9
 	parent = upstream
 	previous = 177478b11
