--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
 	base = ee779fb84
-	trimbase = a83f091f0
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
