--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
-	base = 762adfd49
-	trimbase = 
+	base = 3ba1b645b
+	trimbase = 762adfd49
 	parent = upstream
 	previous = 177478b11
