--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	base = bd39178e5
-	trimbase = 
+	base = baa84416e
+	trimbase = bd39178e5
 	parent = upstream
 	previous = 177478b11
