--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
 	base = f3fea1b90
-	trimbase = 15927e5fe
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
