--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
-	base = 68d696988
-	trimbase = 
+	base = 66a83dab5
+	trimbase = 68d696988
 	parent = upstream
 	previous = 177478b11
