--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
 	base = 6666db243
-	trimbase = 29f48b04c
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
