--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
-	base = 7d09bed91
-	trimbase = 
+	base = 7fa603660
+	trimbase = 7d09bed91
 	parent = upstream
 	previous = 177478b11
