--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
 	base = 9f15afc8a
-	trimbase = 1eaef3307
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
