--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
-	base = 1d9e2e22f
-	trimbase = 
+	base = 0ac4d1125
+	trimbase = 1d9e2e22f
 	parent = upstream
 	previous = 177478b11
