--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
 	base = 9fbdb99e4
-	trimbase = a0723f094
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
