--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
-	base = bb385f8e1
-	trimbase = 
+	base = c1e296820
+	trimbase = bb385f8e1
 	parent = upstream
 	previous = 177478b11
