--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
-	base = 79deb8cf6
-	trimbase = 
+	base = 966c9174b
+	trimbase = 79deb8cf6
 	parent = upstream
 	previous = 177478b11
