--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_core
-	base = 8d0553278
-	trimbase = 
+	base = 10cb9d7d0
+	trimbase = 8d0553278
 	parent = upstream
 	previous = 177478b11
