--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
-	base = bb02fd039
-	trimbase = 
+	base = d244b9f4d
+	trimbase = bb02fd039
 	parent = upstream
 	previous = 177478b11
