--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
-	base = 3ae185405
-	trimbase = 
+	base = ca0ad1701
+	trimbase = 3ae185405
 	parent = upstream
 	previous = 177478b11
