--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
-	base = df37eedeb
-	trimbase = 
+	base = b488b60b5
+	trimbase = df37eedeb
 	parent = upstream
 	previous = 177478b11
