--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
 	base = 55a1e8f9f
-	trimbase = 9783e59e9
+	trimbase = 
 	parent = upstream
 	previous = ca1061c29
