--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_controller_manager_example
 	base = 9aab01986
-	trimbase = 32574f145
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
