--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_controller_manager_example
-	base = aa8efa328
-	trimbase = 
+	base = 27f85943a
+	trimbase = aa8efa328
 	parent = upstream
 	previous = 2e310cd9f
