--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
 	base = 76ee05704
-	trimbase = f1a07aa54
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
