--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
-	base = 75893a9fe
-	trimbase = 
+	base = 530260839
+	trimbase = 75893a9fe
 	parent = upstream
 	previous = 2e310cd9f
