--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
 	base = 34f63195c
-	trimbase = da72ac8a6
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
