--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
-	base = c6e48ee80
-	trimbase = 
+	base = 131334bd1
+	trimbase = c6e48ee80
 	parent = upstream
 	previous = 2e310cd9f
