--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_core
-	base = ad8ec6833
-	trimbase = 
+	base = 1c468fea2
+	trimbase = ad8ec6833
 	parent = upstream
 	previous = 2e310cd9f
