--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
 	base = 81cb1f5f4
-	trimbase = 9721ecd3e
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
