--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
-	base = 985c73740
-	trimbase = 
+	base = 605821393
+	trimbase = 985c73740
 	parent = upstream
 	previous = 2e310cd9f
