--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit
-	base = d16b037b7
-	trimbase = 
+	base = 0407655b2
+	trimbase = d16b037b7
 	parent = upstream
 	previous = 2e310cd9f
