--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
 	base = 6a4e9bb95
-	trimbase = fc345330b
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
