--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
 	base = 15b0328e0
-	trimbase = a00a922dc
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
