--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
 	base = dfc5c088d
-	trimbase = 439e1de93
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
