--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
 	base = 3f5dfb1cb
-	trimbase = 4213048ad
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
