--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/occupancy_map_monitor
 	base = 731ebe538
-	trimbase = fc7060c5f
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
