--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_servo
 	base = 1f8eacab8
-	trimbase = 37c251ee0
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
