--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_servo
-	base = 62d5d59d5
-	trimbase = 
+	base = 64da2b75f
+	trimbase = 62d5d59d5
 	parent = upstream
 	previous = 2e310cd9f
