--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/visualization
 	base = 1b8bc3684
-	trimbase = a11c72174
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
