--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/robot_interaction
 	base = 2a9e5a0d5
-	trimbase = 8ffa4df02
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
