--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
 	base = e2326b6c8
-	trimbase = 60238abf5
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
