--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning_interface
-	base = 0c4bdc8f1
-	trimbase = 
+	base = b7f835bf7
+	trimbase = 0c4bdc8f1
 	parent = upstream
 	previous = 2e310cd9f
