--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/manipulation
 	base = fec3d748b
-	trimbase = be2ed0dda
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
