--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
 	base = f458e66d2
-	trimbase = 6ae167880
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
