--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/perception
-	base = e971096f8
-	trimbase = 
+	base = 850f45817
+	trimbase = e971096f8
 	parent = upstream
 	previous = 2e310cd9f
