--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_ros
 	base = b0c838466
-	trimbase = 14fe2fc8a
+	trimbase = 
 	parent = upstream
 	previous = 46f85959f
