--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
 	base = 29459ccec
-	trimbase = 53eebfbe2
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
