--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_interface
-	base = b3666623e
-	trimbase = 
+	base = 1c91cfcdd
+	trimbase = b3666623e
 	parent = upstream
 	previous = 1e73b2d12
