--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_motion_planner
-	base = 9c6dca09b
-	trimbase = 
+	base = f52f8683d
+	trimbase = 9c6dca09b
 	parent = upstream
 	previous = 1e73b2d12
