--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/chomp/chomp_optimizer_adapter
-	base = 679bcd3d9
-	trimbase = 
+	base = b3f8bb33e
+	trimbase = 679bcd3d9
 	parent = upstream
 	previous = 1e73b2d12
