--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
 	base = d36681134
-	trimbase = bcab223b0
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
