--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/moveit_planners
-	base = 17578e613
-	trimbase = 
+	base = 55f220aaf
+	trimbase = 17578e613
 	parent = upstream
 	previous = 1e73b2d12
