--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_planners/ompl
-	base = 29832334f
-	trimbase = 
+	base = 0250ce0c8
+	trimbase = 29832334f
 	parent = upstream
 	previous = 1e73b2d12
