--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e73b2d12
-	base = 252c823a3
+	base = 3e64cd252
 	trim = moveit_planners/pilz_industrial_motion_planner
-	trimbase = 
+	trimbase = 252c823a3
