--- a/patches.conf
+++ b/patches.conf
@@ -3,4 +3,4 @@
 	previous = 2e310cd9f
 	base = d849ef053
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 32028b1bf
+	trimbase = 
