--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1e73b2d12
-	base = b6a89c99f
+	base = b2ddc3ad0
 	trim = moveit_planners/pilz_industrial_motion_planner_testutils
-	trimbase = 
+	trimbase = b6a89c99f
