--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
 	base = 5e5ef0955
-	trimbase = 07a153601
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
