--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_commander
-	base = f714065f3
-	trimbase = 
+	base = 4afb63015
+	trimbase = f714065f3
 	parent = upstream
 	previous = 1e73b2d12
