--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
 	base = f7641c94b
-	trimbase = 92f98c740
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
