--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_runtime
-	base = db58018fe
-	trimbase = 
+	base = 6f3bff837
+	trimbase = db58018fe
 	parent = upstream
 	previous = 1e73b2d12
