--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
 	base = 3aab20afb
-	trimbase = b13089c5e
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
