--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_fake_controller_manager
-	base = e38cb4424
-	trimbase = 
+	base = 85645fd83
+	trimbase = e38cb4424
 	parent = upstream
 	previous = 1e73b2d12
