--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
 	base = 2bb051b38
-	trimbase = 99b2750f3
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
