--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_plugins
-	base = 1fbd03bc7
-	trimbase = 
+	base = e9e3829c6
+	trimbase = 1fbd03bc7
 	parent = upstream
 	previous = 1e73b2d12
