--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_controller_manager_example
 	base = 27f85943a
-	trimbase = aa8efa328
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
