--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_controller_manager_example
-	base = ef2a255d7
-	trimbase = 
+	base = 22a0c0079
+	trimbase = ef2a255d7
 	parent = upstream
 	previous = 1e73b2d12
