--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_ros_control_interface
-	base = b412af821
-	trimbase = 
+	base = 1919c75a5
+	trimbase = b412af821
 	parent = upstream
 	previous = 1e73b2d12
