--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_plugins/moveit_simple_controller_manager
-	base = 52ed54160
-	trimbase = 
+	base = fe9eb8ffd
+	trimbase = 52ed54160
 	parent = upstream
 	previous = 1e73b2d12
