--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_core
-	base = a6cb0b543
-	trimbase = 
+	base = 05c81cc4e
+	trimbase = a6cb0b543
 	parent = upstream
 	previous = 1e73b2d12
