--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
 	base = 605821393
-	trimbase = 985c73740
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
