--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_setup_assistant
-	base = 320746628
-	trimbase = 
+	base = dc2537dd3
+	trimbase = 320746628
 	parent = upstream
 	previous = 1e73b2d12
