--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit
-	base = 69e6f3c6d
-	trimbase = 
+	base = 249cb7f37
+	trimbase = 69e6f3c6d
 	parent = upstream
 	previous = 1e73b2d12
