--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
 	base = 1c677ce32
-	trimbase = 8bfa1e575
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
