--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_kinematics
-	base = 69f9ba18e
-	trimbase = 
+	base = 594e293e9
+	trimbase = 69f9ba18e
 	parent = upstream
 	previous = 1e73b2d12
