--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
 	base = b8d9c99e2
-	trimbase = b888b968d
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
