--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/warehouse
-	base = 93a15ae36
-	trimbase = 
+	base = 934a31622
+	trimbase = 93a15ae36
 	parent = upstream
 	previous = 1e73b2d12
