--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
 	base = 2c69fc1a0
-	trimbase = be5051904
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
