--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/planning
-	base = f8b870799
-	trimbase = 
+	base = 367b8986d
+	trimbase = f8b870799
 	parent = upstream
 	previous = 1e73b2d12
