--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
 	base = 44731f342
-	trimbase = 196bf3ce0
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
