--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/benchmarks
-	base = 70542b189
-	trimbase = 
+	base = 4d5c7ff7c
+	trimbase = 70542b189
 	parent = upstream
 	previous = 1e73b2d12
