--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/occupancy_map_monitor
 	base = 223522272
-	trimbase = fe698ab15
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
