--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/occupancy_map_monitor
-	base = e4aa7a597
-	trimbase = 
+	base = 7de6cee02
+	trimbase = e4aa7a597
 	parent = upstream
 	previous = 1e73b2d12
