--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = moveit_ros/moveit_servo
 	base = 64da2b75f
-	trimbase = 62d5d59d5
+	trimbase = 
 	parent = upstream
 	previous = 2e310cd9f
